--- a/public/css/app.css
+++ b/public/css/app.css
@@ -62,6 +62,7 @@ body {
   color: #212529;
   text-align: left;
   background-color: #f8fafc;
+  text-transform: uppercase;
 }
 
 [tabindex="-1"]:focus:not(:focus-visible) {
@@ -154,12 +155,13 @@ sup {
 }
 
 a {
-  color: #3490dc;
+  color: #B68420;
   text-decoration: none;
   background-color: transparent;
+  font-size: 1.2rem;
 }
 a:hover {
-  color: #1d68a7;
+  color: #B68420;
   text-decoration: underline;
 }
 
@@ -360,19 +362,19 @@ h1, h2, h3, h4, h5, h6,
 }
 
 h1, .h1 {
-  font-size: 2.25rem;
+  font-size: 1.75rem;
 }
 
 h2, .h2 {
-  font-size: 1.8rem;
+  font-size: 1.5rem;
 }
 
 h3, .h3 {
-  font-size: 1.575rem;
+  font-size: 1.3rem;
 }
 
 h4, .h4 {
-  font-size: 1.35rem;
+  font-size: 1.1rem;
 }
 
 h5, .h5 {
@@ -3922,6 +3924,7 @@ input[type=button].btn-block {
 
 .title-img {
   margin-top: 30px;
+  font-size: 1.5rem;
 }
 
 #user {
@@ -4001,7 +4004,7 @@ input[type=button].btn-block {
 
 #count-photo {
     margin-left: 100px;
-    font-size: 3rem;
+    font-size: 2rem;
     text-decoration: underline;
     margin-top: 130px;
 }
@@ -4030,6 +4033,16 @@ input[type=button].btn-block {
   border-bottom: solid 2px #B68420;
   width: 600px;
   height: 30px;
+}
+
+#user-search {
+  margin-top: 70px;
+  margin-left: 100px;
+  margin-bottom: 70px;
+}
+
+#btn-user-register {
+  margin-top: 30px;
 }
 
 .textarea-form {
